# perpflow

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SPEC.md  package-lock.json  package.json  render.yaml  tsconfig.json
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: trace
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @noble.js  (+35 more)
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CollateralModal.tsx  FaucetButton.tsx  MarketHeader.tsx  OrderForm.tsx  PositionPanel.tsx  WalletButton.tsx
frontend/src/hooks/: useMarket.ts  useOraclePrice.ts  usePosition.ts  useUserAccount.ts
frontend/src/idl/: perp_dex.json
frontend/src/utils/: anchor.ts  constants.ts  math.ts
keeper/: package-lock.json  package.json  tsconfig.json
keeper/src/: amm.ts  config.ts  funding.ts  index.ts  liquidator.ts
programs/perp-dex/: Cargo.toml
programs/perp-dex/src/: constants.rs  error.rs  events.rs  lib.rs
programs/perp-dex/src/instructions/: close_position.rs  deposit_collateral.rs  initialize_market.rs  liquidate_position.rs  mint_test_usdc.rs  mod.rs  open_position.rs  settle_funding.rs  update_amm.rs  update_oracle.rs  withdraw_collateral.rs
programs/perp-dex/src/math/: amm.rs  funding.rs  mod.rs  oracle.rs  pnl.rs
programs/perp-dex/src/state/: market.rs  mod.rs  position.rs  user_account.rs
scripts/: setup-devnet.ts  update-oracle.ts
tests/: perp-dex.ts
(+8 files in other folders)
